--- a/package.json
+++ b/package.json
@@ -6,7 +6,19 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": ["packages", "manager", "ipfs", "npm"],
+  "keywords": [
+    "packages",
+    "manager",
+    "ipfs",
+    "npm"
+  ],
   "author": "Victor Bjelkholm <victorbjelkholm@gmail.com> (https://www.github.com/victorbjelkholm)",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "deepmerge": "0.2.10",
+    "mkdirp": "0.5.1"
+  },
+  "devDependencies": {
+    "mocha": "2.4.5"
+  }
 }
