--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "license": "MIT",
   "dependencies": {
     "deepmerge": "0.2.10",
+    "ipfs-api": "2.13.2",
     "mkdirp": "0.5.1"
   },
   "devDependencies": {
